# non_canonical_splicing

./: .gitignore  as_bench.yaml  pyproject.toml
config/: config.yaml  samples.SOS_splicing_HEK293T.tsv  samples.hela_tm_tg.tsv  samples.hela_tm_tg_ont.tsv  samples.mouse_fat.tsv  samples.mouse_macrophage.tsv  samples.mouse_muscle.tsv
notebooks/: test.ipynb
scripts/: build_jbrowse_config.py  detect_splice_event_from_bam.py  ensid_to_symbol.py  extract_bam_splice.sh  parse_featurecounts.py  prepare_ref.sh  sam_to_sorted_bam.sh  view_genecounts.sh  visualize_samtools_depth.py
test/: .env  Snakefile  test.py
test/scripts/: add_splicing_site.py  create_human_sample_test_data.py  create_mock_fastq.py  create_sampled_mock_genome.py  generate_test_data.py  simulate_transcript_abundances.py
workflow/: Snakefile
workflow/envs/: splicing.yml
workflow/notebooks/: hela_junctions.ipynb  junction_sites.ipynb  miniquant.ipynb  plot.ipynb  plot_ont.ipynb  stringtie.ipynb  test_plot.ipynb  test_visualize_splicing.ipynb
workflow/rules/: common.smk  diff_exp.smk  fastq_dump.smk  generate_bigwig.smk  junction_stat.smk  nanopore.smk  nanopore_pychopper.smk  nanopore_rnaseq_mix.smk  star_align.smk  trim_adapter.smk
workflow/scripts/: build_count_matrix.py  check_splice_sites_type.py  count_non_canonical_junctions.py  deseq2_diffexp.R  deseq2_qc.R  extract_isoquant_nc_transcripts.py  filter_junctions.py  isoquant_to_bed.sh  normalize_junctions_as_cpm.py  normalize_junctions_by_gene.py  transcript_to_intronic_regions.py
