[project]
name = "non-canonical-splicing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "biopython>=1.87",
    "ipykernel>=7.2.0",
    "polars>=1.40.1",
    "pyfaidx>=0.9.0.4",
    "seaborn>=0.13.2",
    "snakemake>=9.21.0",
]
